# ewalena

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindElemental.cmake
include/ewalena/base/: math.h  matrix.h  tensor.h  tensor.h~  utilities.h  vector.h
include/ewalena/lac/: elemental_matrix_base.h
source/: CMakeLists.txt
source/base/: CMakeLists.txt  matrix.cc  matrix.inst  tensor.cc  vector.cc  vector.inst
source/lac/: CMakeLists.txt  elemental_matrix_base.cc  elemental_matrix_base.inst
tests/: CMakeLists.txt
tests/matrix/: 00.cc  01.cc  02.cc  CMakeLists.txt
tests/vector/: 00.cc  01.cc  02.cc  CMakeLists.txt
